EnumTraits.h: error: no matching function for call to 'enumName' with Clang 20 https://bugs.webkit.org/show_bug.cgi?id=289669

Reviewed by Keith Miller.

Clang 20 couldn't compile EnumTraits.h.

> wtf/EnumTraits.h:212:33: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'V'

An invalid enum value can't be specifed to the template parameter `V`.

> template<auto V> constexpr std::span<const char> enumName()

The upstream Magic Enum C++ has a template variable `is_enum_constexpr_static_cast_valid<E, V>` to check a enum value is valid.
<https://github.com/Neargye/magic_enum/blob/a413fcc9c46a020a746907136a384c227f3cd095/include/magic_enum/magic_enum.hpp#L624-L634>

Imported the template variable.

* Source/WTF/wtf/EnumTraits.h:
(WTF::enumName):
(WTF::makeEnumNames):

Canonical link: https://commits.webkit.org/292321@main